[metadata]
name = py_gpu_inferno

[options]
zip_safe = False
packages = find:
package_dir =
    =src
python_requires = >=3.6
install_requires =
    numpy
    # This requirement is only necessary if the build_extension_env
    # context manager is used in the top-level __init__.py
    cmake-build-extension

[options.packages.find]
where = src

[tool:pytest]
addopts = -rsxX -v
testpaths = tests
